# kc-sensor-mock

./: .gitignore  AGENTS.md  README.md  pyproject.toml
c/: Makefile
c/include/: csv_reader.h  sensor_record.h  serialize.h  tcp_client.h
c/src/: csv_reader.c  main.c  serialize.c  tcp_client.c
c/tests/: test_csv_reader.c  test_serialize.c
configs/: default.toml
docs/superpowers/plans/: 2026-04-22-sensor-stream-mock-implementation.md  2026-04-23-consumer-parquet-export.md  2026-04-23-reverse-stream-direction.md  2026-04-25-minimal-c-producer.md
docs/superpowers/specs/: 2026-04-22-sensor-stream-mock-design.md  2026-04-23-consumer-parquet-export-design.md  2026-04-25-minimal-c-producer-design.md
src/kc_sensor_mock/: __init__.py  cli.py  client.py  config.py  consumer.py  generator.py  parquet_export.py  producer.py  protocol.py  ring_buffer.py  sample_data.py  server.py
tests/: conftest.py  test_bootstrap.py  test_c_producer.py  test_capture.py  test_cli.py  test_config.py  test_consumer.py  test_generator.py  test_parquet_export.py  test_producer.py  test_protocol.py  test_ring_buffer.py  test_sample_data.py  test_server_client.py
tests/c_fixtures/: minimal_record.csv
tests/perf/: test_stream_rate.py
