[project]
name = "kc-sensor-mock"
version = "0.1.0"
description = "Mock STM-style sensor streaming package for TCP connector development."
readme = "README.md"
authors = [
    { name = "Linards Kalvāns", email = "linards.kalvans@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kc-sensor-producer = "kc_sensor_mock.cli:run_producer_cli"
kc-sensor-consumer = "kc_sensor_mock.cli:run_consumer_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "perf: manual performance tests that require --run-perf",
]
